--- a/chinavis2022_survey/multimedia.bib
+++ b/chinavis2022_survey/multimedia.bib
@@ -24,7 +24,7 @@ year = {2021}
 }
 @inproceedings{Klammer2020,
   author={Klammer, Claus and Gmeiner, Johannes},
-  booktitle={Proceedings of Euromicro Conference on Software Engineering and Advanced Applications}, 
+  booktitle={Proceedings of the Euromicro Conference on Software Engineering and Advanced Applications}, 
   title={A lightweight customized build chain visualization approach applied in industry}, 
   year={2020},
   pages={1-4},
@@ -57,8 +57,8 @@ journal={Journal of Manufacturing Systems},
 @inproceedings{Imai2012,
 author = {Imai, Yoshiro and Kawasaki, Hirokazu and Hori, Yukio},
 pages = {146--151},
-booktitle= {Proceedings of International Conference on E-Learning and E-Technologies in Education}, 
-title = {A problem-based educational visualization through industry - University Collaboration - Casestudy to apply numerical analysis into performance evaluation of camera},
+booktitle= {Proceedings of the International Conference on E-Learning and E-Technologies in Education}, 
+title = {A problem-based educational visualization through industry-University Collaboration-Casestudy to apply numerical analysis into performance evaluation of camera},
 year = {2012}
 }
 @article{Yin2014,
@@ -73,7 +73,7 @@ year = {2014}
 @article{Gehlot2022,
 author = {Gehlot, Anita and Duggal, Angel Swastik and Malik, Praveen Kumar and Gaba, Gurjot Singh and Masud, Mehedi and Al-amri, Jehad F},
 pages = {521--531},
-title = {A sequential roadmap to Industry 6.0: Exploring future manufacturing trends},
+title = {{A sequential roadmap to Industry 6.0: Exploring future manufacturing trends}},
 journal = {IET Communications},
 volume = {16},
 number = {5},
@@ -98,7 +98,7 @@ year = {2019}
 }
 @inproceedings{Heft2013,
 author = {Heft, W. and Spitzhirn, M. and Rosenthal, P.},
-journal = {Proceedings of EuroVis Workshop on Reproducibility, Verification, and Validation in Visualization},
+journal = {Proceedings of the EuroVis Workshop on Reproducibility, Verification, and Validation in Visualization},
 pages = {7--8},
 title = {A survey on visualization in industrial ergonomics},
 year = {2013}
@@ -117,7 +117,7 @@ author = {Tang, Junxiu and Zhou, Yuhua and Tang, Tan and Weng, Di and Xie, Boyan
 journal = {IEEE Transactions on Visualization and Computer Graphics},
 number = {1},
 pages = {857--867},
-title = {A visualization approach for monitoring order processing in E-Commerce warehouse},
+title = {{A visualization approach for monitoring order processing in E-Commerce warehouse}},
 volume = {28},
 year = {2022}
 }
@@ -125,14 +125,14 @@ year = {2022}
 author = {Atharvan, Gannu},
 pages = {1--41},
 journal = {International Journal of Communication Systems},
-title = {A way forward towards a technology-driven development of industry 4.0 using big data analytics in 5G-enabled IIoT},
+title = {{A way forward towards a technology-driven development of industry 4.0 using big data analytics in 5G-enabled IIoT}},
 number = {1},
 volume = {35},
 year = {2022}
 }
 @inproceedings{Ivaschenko,
 author = {Ivaschenko, Anton and Khorina, Anastasia and Sitnikov, Pavel},
-booktitle= {Proceedings of IEEE Industrial Cyber-Physical Systems},
+booktitle= {Proceedings of the IEEE International Conference on Industrial Cyber-Physical Systems},
 pages ={519--522},
 title = {Accented visualization by augmented reality for smart manufacturing aplications},
 year = {2018}
@@ -148,14 +148,14 @@ volume = {30},
 @inproceedings{Wang2021,
 author = {Wang, Jianjun and Wang, Ran},
 pages = {564--567},
-title = {Advanced manufacturing data space visualization based on PCA-Radviz model},
+title = {{Advanced manufacturing data space visualization based on PCA-Radviz model}},
 year = {2021},
-booktitle= {Proceedings of IEEE Conference on Telecommunications, Optics and Computer Science},
+booktitle= {Proceedings of the IEEE Conference on Telecommunications, Optics and Computer Science},
 }
 @inproceedings{Saha2021,
 author = {Saha, Koustuv and Liu, Yozen and Vincent, Nicholas},
 booktitle= {Proceedings of the CHI Conference on Human Factors in Computing Systems},
-title = {Advertiming maters: Examining user ad consumption for efective ad allocations on social media},
+title = {{Advertiming maters: Examining user ad consumption for efective ad allocations on social media}},
 number = {581},
 pages = {1--18},
 year = {2021}
@@ -163,14 +163,14 @@ year = {2021}
 @inproceedings{Liu2021,
 author = {Liu, Can and Han, Yun and Jiang, Ruike and Yuan, Xiaoru},
 pages = {11--20},
-booktitle= {Proceedings of IEEE Pacific Visualization Symposium},
-title = {ADVISor : Automatic visualization answer for natural-language question on tabular data},
+booktitle= {Proceedings of the IEEE Pacific Visualization Symposium},
+title = {{ADVISor: Automatic visualization answer for natural-language question on tabular data}},
 year = {2021}
 }
 @inproceedings{Hesse2012,
 author = {Hesse, Stefan and Rosjat, Martin and Str, Chemnitzer and V, Iconics Europe B and Polytechnique, {\'{E}}cole and Lausanne, F{\'{e}}d{\'{e}}rale De},
 pages = {1--5},
-booktitle= {Proceedings of International Conference on Emerging Technologies and Factory Automation},
+booktitle= {Proceedings of the IEEE International Conference on Emerging Technologies and Factory Automation},
 title = {An approach for a component-based visualization of heterogeneous manufacturing data sources},
 year = {2012}
 }
@@ -186,7 +186,7 @@ year = {2021}
 author = {Kahveci, Sinan and Alkan, Bugra and Ahmad, H and Ahmad, Bilal and Harrison, Robert},
 journal = {Journal of Manufacturing Systems},
 pages = {214--223},
-title = {An end-to-end big data analytics platform for IoT-enabled smart factories : A case study of battery module assembly system for electric vehicles},
+title = {{An end-to-end big data analytics platform for IoT-enabled smart factories: A case study of battery module assembly system for electric vehicles}},
 volume = {63},
 year = {2022}
 }
@@ -202,7 +202,7 @@ year = {2021}
 @inproceedings{Huettenberger2015,
 author = {Huettenberger, Lars and Garth, Christoph},
 pages = {135--139},
-booktitle= {Proceedings of IEEE Pacific Visualization Symposium},
+booktitle= {Proceedings of the IEEE Pacific Visualization Symposium},
 title = {Application of pareto sets in quality control of series production in car manufacturing},
 year = {2015}
 }
@@ -210,13 +210,13 @@ year = {2015}
 author = {Stief, Paul and Dantan, Jean-yves and Etienne, Alain and Siadat, Ali},
 journal = {Procedia CIRP},
 pages = {368--373},
-title = {Augmented Reality based Visualization of CAM Instructions towards Industry 4.0 paradigm : a CNC Bending Machine case study},
+title = {{Augmented reality based visualization of CAM instructions towards Industry 4.0 paradigm: A CNC bending machine case study}},
 volume = {70},
 year = {2018}
 }
 @article{Gove,
 author = {Gove, Robert},
-title = {Automatic Narrative Summarization for Visualizing Cyber Security Logs and Incident Reports},
+title = {Automatic narrative summarization for visualizing cyber security logs and incident reports},
 journal = {IEEE Transactions on Visualization and Computer Graphics}, 
 year={2022},
 volume={28},
@@ -226,7 +226,7 @@ pages = {1182--1190},
 @inproceedings{Battle2018,
 author = {Battle, Leilani and Mukusheva, Dana and Miranda, Zachery and Stonebraker, Michael},
 pages = {1--8},
-title = {Beagle : Automated extraction and interpretation of visualizations from the web},
+title = {Beagle: Automated extraction and interpretation of visualizations from the web},
 year = {2018},
 number = {594},
 booktitle= {Proceedings of the CHI Conference on Human Factors in Computing Systems}
@@ -234,13 +234,13 @@ booktitle= {Proceedings of the CHI Conference on Human Factors in Computing Syst
 @inproceedings{Pantforder2009,
 author = {Pantf{\"{o}}rder, Dorothea and Vogel-heuser, Birgit},
 pages = {824--829},
-title = {Benefit and evaluation of interactive 3D process data visualization in operator training of plant manufacturing industry},
-booktitle= {Proceedings of IEEE International Conference on Systems, Man and Cybernetics}, 
+title = {{Benefit and evaluation of interactive 3D process data visualization in operator training of plant manufacturing industry}},
+booktitle= {Proceedings of the IEEE International Conference on Systems, Man and Cybernetics}, 
 year = {2009}
 }
 @inproceedings{Andrienko2020,
 author = {Andrienko, Gennady and Andrienko, Natalia and Drucker, Steven and Fekete, Jean Daniel and Fisher, Danyel and Idreos, Stavros and Kraska, Tim and Li, Guoliang and Ma, Kwan Liu and Mackinlay, Jock D. and Oulasvirta, Antti and Schreck, Tobias and Schmann, Heidrun and Stonebraker, Michael and Auber, David and Bikakis, Nikos and Chrysanthis, Panos K. and Papastefanatos, George and Sharaf, Mohamed A.},
-journal = {Proceedings of International Workshop on Big Data Visual Exploration and Analytics},
+journal = {Proceedings of the International Workshop on Big Data Visual Exploration and Analytics},
 title = {Big data visualization and analytics: Future research challenges and emerging applications},
 year = {2020}
 }
@@ -254,9 +254,9 @@ volume = {59},
 year = {2021}
 }
 @inproceedings{buttner2020augmented,
-title={{Augmented Reality Training for Industrial Assembly Work-Are Projection-based AR Assistive Systems an Appropriate Tool for Assembly Training?}},
+title={{Augmented reality training for industrial assembly work-are projection-based AR assistive systems an appropriate tool for assembly training?}},
 author={B{\"u}ttner, Sebastian and Prilla, Michael and R{\"o}cker, Carsten},
-booktitle={Proceedings of the 2020 CHI conference on human factors in computing systems},
+booktitle={Proceedings of the CHI Conference on Human Factors in Computing Systems},
 pages={1--12},
 year={2020}
 }
@@ -264,7 +264,7 @@ year={2020}
 author = {Design, Cirp and Stief, Paul and Etienne, Alain and Siadat, Ali},
 journal = {Procedia CIRP},
 pages = {573--579},
-title = {Change-point visualization and variation analysis in a simple production line: a process mining application in manufacturing},
+title = {Change-point visualization and variation analysis in a simple production line: A process mining application in manufacturing},
 volume = {99},
 year = {2020}
 }
@@ -279,7 +279,7 @@ year = {2012}
 }
 @inproceedings{Emelyanova,
 author = {Emelyanova, Yulia and Khachumov, Vyacheslav},
-booktitle= {Proceedings of IEEE International Conference on Progress in Informatics and Computing},
+booktitle= {Proceedings of the IEEE International Conference on Progress in Informatics and Computing},
 title = {Cognitive images for the visual analysis of the states of complex objects in relation to the space industry},
 pages = {219--225},
 year = {2020}
@@ -313,8 +313,8 @@ year = {2013}
 @article{Chhikara2022,
 author = {Chhikara, Prateek},
 pages = {658--688},
-title = {Data dimensionality reduction techniques for Industry 4.0: Research results, challenges, and future research directions},
-journal = {Software: Practice and Experience},
+title = {{Data dimensionality reduction techniques for Industry 4.0: Research results, challenges, and future research directions}},
+journal = {Software-Practice and Experience},
 number = {3},
 volume = {52},
 year = {2022}
@@ -322,7 +322,7 @@ year = {2022}
 @inproceedings{Agusto,
 author = {Agusto, S and Henry, P and Shiguihara-ju, Pedro},
 title = {Data visualization in dashboards through virtual try-on technology in fashion industry},
-booktitle= {Proceedings of IEEE Colombian Conference on Applications in Computational Intelligence},
+booktitle= {Proceedings of the IEEE Colombian Conference on Applications in Computational Intelligence},
 pages = {1--6},
 year = {2019}
 }
@@ -334,15 +334,15 @@ title = {Data-driven cyber-physical system framework for connected resistance sp
 volume = {67},
 year = {2021}
 }
-@article{Worner2013,
+@inproceedings{Worner2013,
 author = {W{\"{o}}rner, M. and Metzger, M. and Ertl, T.},
-journal = {EuroVis Workshop on Visual Analytics},
+booktitle = {Proceedings of the EuroVis Workshop on Visual Analytics},
 pages = {55--59},
-title = {Dataflow-based Visual Analysis for Fault Diagnosis and Predictive Maintenance in Manufacturing},
+title = {Dataflow-based visual analysis for fault diagnosis and predictive maintenance in manufacturing},
 year = {2013}
 }
 @article{wang2019datashot,
-	title={Datashot: Automatic generation of fact sheets from tabular data},
+	title={DataShot: Automatic generation of fact sheets from tabular data},
 	author={Wang, Yun and Sun, Zhida and Zhang, Haidong and Cui, Weiwei and Xu, Ke and Ma, Xiaojuan and Zhang, Dongmei},
 	journal={IEEE Transactions on Visualization and Computer Graphics},
 	volume={26},
@@ -353,7 +353,7 @@ year = {2013}
 @article{Zhang2021,
 author = {Zhang, Jianjing and Gao, Robert X},
 journal = {Chinese Journal of Mechanical Engineering},
-title = {Deep Learning - Driven data curation and model interpretation for smart manufacturing},
+title = {{Deep Learning-Driven data curation and model interpretation for smart manufacturing}},
 year = {2021},
 volume = {34},
 number = {1},
@@ -363,7 +363,7 @@ pages = {1--21},
 author = {Wang, Qiyue and Jiao, Wenhua and Zhang, Yuming},
 journal = {Journal of Manufacturing Systems},
 pages = {429--439},
-title = {Deep Learning - Empowered digital twin for visualized weld joint growth monitoring and penetration control},
+title = {{Deep Learning-Empowered digital twin for visualized weld joint growth monitoring and penetration control}},
 volume = {57},
 year = {2020}
 }
@@ -387,9 +387,9 @@ year = {2016}
 @inproceedings{Baboli2021,
 author = {Baboli, Armand},
 pages = {126--131},
-title = {Determination of health key performance indicators and their visualization in the production system in the context of industry 4.0},
+title = {{Determination of health key performance indicators and their visualization in the production system in the context of Industry 4.0}},
 year = {2021},
-booktitle = {Proceedings of IEEE International Conference on Industrial Engineering and Applications},
+booktitle = {Proceedings of the IEEE International Conference on Industrial Engineering and Applications},
 }
 @article{Zhang2014,
 author = {Zhang, Jianping and Yu, Fangqiang and Li, Ding},
@@ -403,8 +403,8 @@ number = {1},
 @book{Through,
 author = {Vytautas Ostasevicius},
 pages = {11--147},
-title = {Digital Twins for Smart Manufacturing},
-bookTitle={Digital Twins in Manufacturing Virtual and Physical Twins for Advanced Manufacturing},
+title = {Digital twins for smart manufacturing},
+bookTitle={Digital twins in manufacturing virtual and physical twins for advanced manufacturing},
 year={2022},
 publisher={Springer International Publishing},
 }
@@ -412,13 +412,13 @@ publisher={Springer International Publishing},
 author = {Huang, Jie and Saito, Takayuki},
 journal = {Chemical Engineering Science},
 pages = {105--115},
-title = {Discussion about the differences in mass transfer , bubble motion and surrounding liquid motion between a contaminated system and a clean system based on consideration of three-dimensional wake structure obtained from LIF visualization},
+title = {{Discussion about the differences in mass transfer, bubble motion and surrounding liquid motion between a contaminated system and a clean system based on consideration of three-dimensional wake structure obtained from LIF visualization}},
 volume = {170},
 year = {2017}
 }
 @article{Fu2020,
 author = {Fu, Yanting and Dong, Na and Ge, Qi and Xiong, Feng and Gong, Cheng},
-title = {Driving-paths of green buildings industry (GBI) from stakeholders ' green behavior based on the network analysis},
+title = {{Driving-paths of green buildings industry (GBI) from stakeholders ' green behavior based on the network analysis}},
 volume = {273},
 year = {2020},
 journal = {Journal of Cleaner Production},
@@ -427,7 +427,7 @@ pages = {122883},
 @article{Liu2019,
 author = {Liu, Rui and Blazek, Kenneth and Forman, Bruce and Fritz, Chris and Graham, Clint},
 pages = {1800398},
-title = {Effect of Submerged-Entry Nozzle (SEN) design on fluid flow and heat transfer in a Thin-Slab steel caster},
+title = {{Effect of Submerged-Entry Nozzle (SEN) design on fluid flow and heat transfer in a Thin-Slab steel caster}},
 journal = {Steel Research International},
 volume = {90},
 number = {4},
@@ -452,7 +452,7 @@ year = {2020}
 }
 @article{Yoo2021,
 author = {Yoo, Soyoung and Kang, Namwoo},
-journal = {Expert Systems With Applications},
+journal = {Expert Systems with Applications},
 pages = {115430},
 title = {Explainable artificial intelligence for manufacturing cost estimation and machining feature visualization},
 volume = {183},
@@ -469,7 +469,7 @@ year = {2019}
 @inproceedings{Mukherjee2014,
 author = {Mukherjee, J K},
 pages = {18--21},
-booktitle= {Proceedings of International Conference on Information Science and Applications},
+booktitle= {Proceedings of the International Conference on Information Science and Applications},
 title = {Fast visualisation technique for view constrained tele-operation in nuclear industry},
 year = {2014}
 }
@@ -478,7 +478,7 @@ author = {Kutej, Dominik and Vorraber, Wolfgang and Kutej, Dominik and Vorraber,
 journal = {Procedia Manufacturing},
 number = {2019},
 pages = {13--21},
-title = {Fostering additive manufacturing of special parts with augmented-reality on-site visualization},
+title = {{Fostering additive manufacturing of special parts with Augmented-Reality on-site visualization}},
 volume = {39},
 year = {2020}
 }
@@ -486,15 +486,15 @@ year = {2020}
 author = {Farooqui, Ashfaq and Bengtsson, Kristofer and Falkman, Petter and Fabian, Martin},
 journal = {CIRP Journal of Manufacturing Science and Technology},
 pages = {6--16},
-title = {From factory floor to process models : A data gathering approach to generate , transform , and visualize manufacturing processes},
+title = {From factory floor to process models: A data gathering approach to generate, transform, and visualize manufacturing processes},
 volume = {24},
 year = {2019}
 }
 @inproceedings{B,
 author = {B, Satu Tamminen and Tiensuu, Henna and Ferreira, Eija and Helaakoski, Heli},
-booktitle= {Proceedings of Industrial Conference on Data Mining},
+booktitle= {Proceedings of the Industrial Conference on Data Mining},
 pages = {17--28},
-title = {From measurements to knowledge - online quality monitoring and smart manufacturing},
+title = {From measurements to knowledge-online quality monitoring and smart manufacturing},
 year = {2018}
 }
 @article{Huang2020,
@@ -511,7 +511,7 @@ author = {North, S M E and Rosales, Jonathan and Deshpande, Sourabh and Anand, S
 journal = {Procedia Manufacturing},
 number = {2020},
 pages = {618--627},
-title = {IIoT based augmented reality for factory data collection and visualization},
+title = {{IIoT based augmented reality for factory data collection and visualization}},
 volume = {53},
 year = {2021}
 }
@@ -519,14 +519,14 @@ year = {2021}
 author = {Industry, Graph and Graph, B The Two-dimensional Contribution},
 pages = {5--9},
 title = {Improved alarm visualization system based on two-dimensional online root-cause contribution},
-booktitle= {Proceedings of IEEE International Conference on Networking, Sensing and Control},
+booktitle= {Proceedings of the IEEE International Conference on Networking, Sensing and Control},
 year = {2019}
 }
 @article{Wang2019,
 author = {Wang, Zhen and Chen, Shuting and Cui, Can and Liu, Qiaoling and Deng, Liangchun},
 journal = {Journal of Cleaner Production},
 pages = {1109--1119},
-title = {Industry relocation or emission relocation ? Visualizing and decomposing the dislocation between China ' s economy and carbon emissions},
+title = {{Industry relocation or emission relocation? Visualizing and decomposing the dislocation between China's economy and carbon emissions}},
 volume = {208},
 year = {2019}
 }
@@ -535,7 +535,7 @@ author = {Berg, Leif P. and Vance, Judy M.},
 journal = {Virtual Reality},
 number = {1},
 pages = {1--17},
-title = {Industry use of virtual reality in product design and manufacturing: a survey},
+title = {Industry use of virtual reality in product design and manufacturing: A survey},
 volume = {21},
 year = {2017}
 }
@@ -561,7 +561,7 @@ author = {Font Vivanco, David and Hoekman, Paul and Fishman, Tomer and Pauliuk, 
 journal = {Journal of Industrial Ecology},
 number = {3},
 pages = {520--531},
-title = {Interactive visualization and industrial ecology: applications, challenges, and opportunities},
+title = {Interactive visualization and industrial ecology: Applications, challenges, and opportunities},
 volume = {23},
 year = {2019}
 }
@@ -570,14 +570,14 @@ author = {Gubbi, Jayavardhana and Buyya, Rajkumar and Marusic, Slaven and Palani
 journal = {Future Generation Computer Systems},
 number = {7},
 pages = {1645--1660},
-title = {Internet of Things (IoT): A vision, architectural elements, and future directions},
+title = {{Internet of Things (IoT): A vision, architectural elements, and future directions}},
 volume = {29},
 year = {2013}
 }
 @inproceedings{Satkowski2021,
 author = {Satkowski, Marc and Dachselt, Raimund},
 booktitle= {Proceedings of the CHI Conference on Human Factors in Computing Systems},
-title = {Investigating the impact of real-world environments on the perception of 2D visualizations in augmented reality},
+title = {{Investigating the impact of real-world environments on the perception of 2D visualizations in augmented reality}},
 year = {2021},
 pages = {1--15},
 number = {522},
@@ -585,7 +585,7 @@ number = {522},
 @article{yi2007toward,
 title={Toward a deeper understanding of the role of interaction in information visualization},	
 author={Yi, Ji Soo and ah Kang, Youn and Stasko, John and Jacko, Julie A},
-journal={IEEE transactions on visualization and computer graphics},
+journal = {IEEE Transactions on Visualization and Computer Graphics},
 volume={13},
 number={6},
 pages={1224--1231},
@@ -611,7 +611,7 @@ year = {2020}
 @inproceedings{Luca2021,
 author = {Luca, Massimiliano Di and Seif, Hasti},
 booktitle= {Proceedings of the CHI Conference on Human Factors in Computing Systems},
-title = {Locomotion vault: The extra mile in analyzing vr locomotion techniques},
+title = {{Locomotion vault: The extra mile in analyzing VR locomotion techniques}},
 number = {128},
 pages = {1--10},
 year = {2021}
@@ -620,7 +620,7 @@ year = {2021}
 author = {Cui, Yesheng and Kara, Sami and Chan, Ka C},
 journal = {Robotics and Computer-Integrated Manufacturing},
 pages = {101861},
-title = {Manufacturing big data ecosystem : A systematic literature review},
+title = {Manufacturing big data ecosystem: A systematic literature review},
 volume = {62},
 year = {2020}
 }
@@ -628,7 +628,7 @@ year = {2020}
 author = {Murithi, Joel and Lin, Chyi-yeu},
 journal = {Robotics and Computer Integrated Manufacturing},
 pages = {101957},
-title = {Markerless cooperative augmented reality-based smart manufacturing double-check system: Case of safe PCBA inspection following automatic optical inspection},
+title = {{Markerless cooperative augmented reality-based smart manufacturing double-check system: Case of safe PCBA inspection following automatic optical inspection}},
 volume = {64},
 year = {2020}
 }
@@ -644,8 +644,8 @@ year = {2007}
 @inproceedings{Newell2020,
 author = {Newell, Anthony and Lhachemi, Hugo and George, Abraham and Papakostas, Nikolaos},
 pages = {1--7},
-booktitle = {Proceedings of IEEE International Conference on Engineering, Technology and Innovation},
-title = {On design for additive manufacturing : Review of challenges and opportunities utilising visualisation technologies},
+booktitle = {Proceedings of the IEEE International Conference on Engineering, Technology and Innovation},
+title = {On design for additive manufacturing: Review of challenges and opportunities utilising visualisation technologies},
 year = {2020}
 }
 @article{Park2020,
@@ -653,7 +653,7 @@ author = {Park, Kyu Tae and Lee, Donggun and Do, Sang},
 journal = {International Journal of Precision Engineering and Manufacturing-Green Technology},
 number = {3},
 pages = {791--814},
-title = {Operation procedures of a Work-Center-Level digital twin for sustainable and smart manufacturing},
+title = {{Operation procedures of a Work-Center-Level digital twin for sustainable and smart manufacturing}},
 volume = {7},
 year = {2020}
 }
@@ -670,22 +670,22 @@ author = {Chang, Yung-chun and Ku, Chih-hao and Nguyen, Duy-duc Le},
 journal = {Information and Management},
 number = {2},
 pages = {103587},
-title = {Predicting aspect-based sentiment using deep learning and information visualization : The impact of COVID-19 on the airline industry},
+title = {{Predicting aspect-based sentiment using deep learning and information visualization: The impact of COVID-19 on the airline industry}},
 volume = {59},
 year = {2022}
 }
 @inproceedings{Neill2021,
 author = {Neill, Meadhbh O and Morgan, Jeff and Burke, Kevin},
 pages = {659--664},
-booktitle = {Proceedings of IEEE SmartWorld, Ubiquitous Intelligence and Computing, Advanced and Trusted Computing, Scalable Computing and Communications, Internet of People and Smart City Innovation},
-title = {Process visualization of Manufacturing Execution System (MES) data},
+booktitle = {Proceedings of the IEEE SmartWorld, Ubiquitous Intelligence and Computing, Advanced and Trusted Computing, Scalable Computing and Communications, Internet of People and Smart City Innovation},
+title = {{Process visualization of manufacturing execution system (MES) data}},
 year = {2021}
 }
 @article{Imran2019,
 author = {Imran, Syed and Szczerbicki, Edward and Sanin, Cesar},
 journal = {Procedia Computer Science},
 pages = {1976--1985},
-title = {Proposition of the methodology for data acquisition, analysis and visualization in support of industry 4.0},
+title = {{Proposition of the methodology for data acquisition, analysis and visualization in support of Industry 4.0}},
 volume = {159},
 year = {2019}
 }
@@ -726,8 +726,7 @@ author = {Mei, Honghui and Chen, Wei and Wei, Yating and Hu, Yuanzhe and Zhou, S
 journal = {IEEE Transactions on Visualization and Computer Graphics},
 number = {1},
 pages = {1161--1171},
-publisher = {IEEE},
-title = {RSATree: Distribution-Aware data representation of Large-Scale tabular datasets for flexible visual query},
+title = {RSATree: Distribution-Aware data representation of large-scale tabular datasets for flexible visual query},
 volume = {26},
 year = {2019}
 }
@@ -744,7 +743,7 @@ pages={33--44},
 author = {Kang, Hyoung Seok and Lee, Ju Yeon and Choi, Sangsu and Kim, Hyun and Park, Jun Hee and Son, Ji Yeon and Kim, Bo Hyun and Noh, Sang Do},
 number = {1},
 pages = {111--128},
-title = {Smart Manufacturing : Past research, present findings, and future directions},
+title = {Smart Manufacturing: Past research, present findings, and future directions},
 journal={International Journal of Precision Engineering and Manufacturing-Green Technology},
 volume = {3},
 year = {2016}
@@ -770,7 +769,7 @@ publisher={Springer International Publishing},
 @article{Qu2019,
 author={Qu, YJ and Ming, XG and Liu, ZW and Zhang, XY and Hou, ZT},
 pages = {3751--3768},
-title = {Smart manufacturing systems : state of the art and future trends},
+title = {Smart manufacturing systems: State of the art and future trends},
 year = {2019},
 journal={The International Journal of Advanced Manufacturing Technology},
 volume={103},
@@ -781,11 +780,11 @@ author = {Gross, Joshua and Wuest, Thorsten},
 pages = {487--494},
 title = {Smart products in smart manufacturing systems: An opportunity to utilize AR?},
 year = {2020},
-booktitle={Proceedings of International Conference on Advances in Production Management Systems},
+booktitle={Proceedings of the International Conference on Advances in Production Management Systems},
 }
 @inproceedings{Blumenschein2018,
 author = {Blumenschein, Michael and Behrisch, Michael and Schmid, Stefanie and Butscher, Simon and Wahl, Deborah R and Villinger, Karoline and Renner, Britta and Reiterer, Harald and Keim, Daniel A},
-booktitle={Proceedings of IEEE Conference on Visual Analytics Science and Technology},
+booktitle={Proceedings of the IEEE Conference on Visual Analytics Science and Technology},
 pages={36--47},
 title = {SMARTexplore: Simplifying high-dimensional data analysis through a table-based visual analytics approach},
 year = {2018}
@@ -803,13 +802,13 @@ year = {2022}
 author = {Gholami, Hamed and Jamil, Norhazrina and Zakuan, Norhayati and Zameri, Muhamad and Saman, M A T and Sharif, Safian and Awang, Siti Rahmah},
 journal = {IEEE Access},
 pages = {131638--131648},
-title = {Social Value Stream Mapping (Socio-VSM): Methodology to societal sustainability visualization and assessment in the manufacturing system},
+title = {{Social Value Stream Mapping (Socio-VSM): Methodology to societal sustainability visualization and assessment in the manufacturing system}},
 volume = {7},
 year = {2019}
 }
 @article{Zoubi,
 author = {Zoubi, Dana Al and Kelley, Jameel and Gilbert, Stephen B},
-title = {TeachActive Feedback Dashboard: Using Automated Classroom Analytics to Visualize Pedagogical Strategies at a Glance},
+title = {TeachActive feedback dashboard: Using automated classroom analytics to visualize pedagogical strategies at a glance},
 pages = {1--6},
 number = {312},
 journal = {Extended Abstracts of the CHI Conference on Human Factors in Computing Systems},
@@ -817,8 +816,8 @@ year = {2021}
 }
 @inproceedings{Fkhq2021,
 author={Chen, Charles and Chen, Ling and Xiao, Mingjun and Ning, Jinfeng},
-title = {The impact analysis of COVID-19 on china various industries using crawler technology and data visualization technology},
-booktitle={Proceedings of IEEE International Conference of Safe Production and Informatization},
+title = {{The impact analysis of COVID-19 on china various industries using crawler technology and data visualization technology}},
+booktitle={Proceedings of the IEEE International Conference of Safe Production and Informatization},
 pages={400--405},
 year = {2020}
 }
@@ -850,7 +849,7 @@ year = {2016}
 }
 @inproceedings{Cardoso2010,
 author = {Cardoso, Jorge and Barros, Alistair and May, Norman and Kylau, Uwe},
-booktitle = {Proceedings of IEEE International Conference on Services Computing},
+booktitle = {Proceedings of the IEEE International Conference on Services Computing},
 pages = {602--609},
 title = {Towards a unified service description language for the internet of services: Requirements and first developments},
 year = {2010}
@@ -865,7 +864,7 @@ year = {2017}
 @inproceedings{Pandian2021,
 author = {Pandian, Vinoth Pandian Sermuga and Suleri, Sarah and Jarke, Matthias},
 booktitle= {Proceedings of the CHI Conference on Human Factors in Computing Systems},
-title = {Uisketch: A large-scale dataset of ui element sketches},
+title = {{Uisketch: A large-scale dataset of UI element sketches}},
 year = {2021},
 number = {319},
 pages = {1--14},
@@ -924,14 +923,14 @@ year={2016},
 author = {Basole, Rahul C and Bellamy, Marcus A},
 journal = {Decision Support Systems},
 pages = {109--120},
-title = {Visual analysis of supply network risks : Insights from the electronics industry},
+title = {Visual analysis of supply network risks: Insights from the electronics industry},
 volume = {67},
 year = {2014}
 }
 @inproceedings{Silvestro,
 author = {Silvestro, Lorenzo Di and Burch, Michael and Caccamo, Margherita and Weiskopf, Daniel and Beck, Fabian and Gallo, Giovanni},
 title = {Visual analysis of time-dependent multivariate data from dairy farming industry},
-booktitle={Proceedings of International Conference on Information Visualization Theory and Applications},
+booktitle={Proceedings of the International Conference on Information Visualization Theory and Applications},
 pages={99--106},
 year={2014},
 }
@@ -948,7 +947,7 @@ author = {Meyer, Matthias and Beck, Fabian and Lohmann, Steffen},
 pages = {160--167},
 title = {Visual monitoring of process runs: An application study for stored procedures},
 year = {2016},
-booktitle={Proceedings of IEEE Pacific Visualization Symposium},
+booktitle={Proceedings of the IEEE Pacific Visualization Symposium},
 }
 @article{Sedlmair2014,
 author = {Sedlmair, Michael and Heinzl, Christoph and Bruckner, Stefan},
@@ -962,7 +961,6 @@ year={2014},
 @inproceedings{Sharif2014,
 author={Sharif, Amir and Kamal, Muhammad Mustafa and Irani, Zahir},
 title={Visualisation of knowledge mapping for information systems evaluation: A manufacturing context},
-author={Sharif, Amir and Kamal, Muhammad Mustafa and Irani, Zahir},
 booktitle={Proceedings of the Hawaii International Conference on System Sciences},
 pages={3478--3487},
 year={2014},
@@ -991,7 +989,7 @@ pages = {2402--2411},
 title = {Visualization of parameter space for image analysis},
 volume = {17},
 year = {2011},
-journal={IEEE Transactions on Visualization and Computer Graphics},
+journal = {IEEE Transactions on Visualization and Computer Graphics},
 }
 @article{Zappulla2019,
 author = {Zappulla, Matthew L S and Cho, Seong-mook and Thomas, Brian G},
@@ -1041,12 +1039,12 @@ author = {McNutt, A.},
 journal = {Computer Graphics Forum},
 number = {3},
 pages = {61--73},
-title = {What are table cartograms good for anyway? An algebraic analysis},
+title = {{What are table cartograms good for anyway? An algebraic analysis}},
 volume = {40},
 year = {2021}
 }
 @article{Graphics,
-  title={Tabular Data Visualization Interactive Construction for Analysis Tasks},
+  title={Tabular data visualization interactive construction for analysis tasks},
   author={Ma, Nan and Yuan, Xiaoru},
   journal={Journal of Computer-Aided Design and Computer Graphics},
   volume={32},
@@ -1074,7 +1072,7 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
 @inproceedings{wu2018visual,
   title={A visual analytics approach for equipment condition monitoring in smart factories of process industry},
   author={Wu, Wenchao and Zheng, Yixian and Chen, Kaiyuan and Wang, Xiangyu and Cao, Nan},
-  booktitle={Proceedings of IEEE Pacific Visualization Symposium},
+  booktitle={Proceedings of the IEEE Pacific Visualization Symposium},
   pages={140--149},
   year={2018},
 }
@@ -1087,9 +1085,9 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
 }
 
 @inproceedings{suschnigg2020exploration,
-  title={Exploration of Anomalies in Cyclic Multivariate Industrial Time Series Data for Condition Monitoring},
+  title={Exploration of anomalies in cyclic multivariate industrial time series data for condition monitoring},
   author={Suschnigg, Josef and Mutlu, Belgin and Fuchs, Anna Katharina and Sabol, Vedran and Thalmann, Stefan and Schreck, Tobias},
-  booktitle={Proceedings of EDBT/ICDT Workshops},
+  booktitle={Proceedings of the EDBT/ICDT Workshops},
   pages={1--8},
   year={2020}
 }
@@ -1103,16 +1101,16 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2016},
 }
 @inproceedings{tillinghast2014integrating,
-  title={Integrating three dimensional visualization and additive manufacturing into K-12 classrooms},
+  title={{Integrating three dimensional visualization and additive manufacturing into K-12 classrooms}},
   author={Tillinghast, Ralph C and Wright, Michael T and Arnold, Ross D and Zunino, James L and Pannullo, Traci L and Dabiri, Shahram and Petersen, Edward A and Gonzalez, Maria C},
-  booktitle={Proceedings of IEEE Integrated STEM Education Conference},
+  booktitle={Proceedings of the IEEE Integrated STEM Education Conference},
   pages={1--7},
   year={2014},
 }
 @inproceedings{chankhihort2016integrative,
   title={Integrative manufacturing data visualization using calendar view map},
   author={Chankhihort, Doung and Choi, Sung Soo and Lee, Gyu Jung and Im, Byung Mook and Ahn, Da-Mi and Choi, Eun-Suk and Nasridinov, Aziz and Kwon, Sun-Ok and Lee, Sang-Hyun and Kang, Jeong-Tae and others},
-  booktitle={Proceedings of Eighth International Conference on Ubiquitous and Future Networks},
+  booktitle={Proceedings of the International Conference on Ubiquitous and Future Networks},
   pages={114--116},
   year={2016},
 }
@@ -1126,7 +1124,7 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2021},
 }
 @article{tao2020machining,
-  title={Machining accuracy detection of PCB hole by X-ray micro-CT},
+  title = {{Machining accuracy detection of PCB hole by X-ray micro-CT}},
   author={Tao, Wenbin and Xu, Ying and Liu, Hao and Wang, Chengyong and Zheng, Lijuan},
   journal={Micron},
   volume={131},
@@ -1152,9 +1150,9 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2019},
 }
 @inproceedings{qiang2015research,
-  title={Research of visualization monitoring technology based on Internet of Things in discrete manufacturing process},
+  title = {{Research of visualization monitoring technology based on Internet of Things in discrete manufacturing process}},
   author={Qiang, Min and Yu-feng, Ding and Ting, Xiao and Shun-li, Wang},
-  booktitle={Proceedings of IEEE International Symposium on Dependable Computing and Internet of Things},
+  booktitle={Proceedings of the International Symposium on Dependable Computing and Internet of Things},
   pages={128--133},
   year={2015},
 }
@@ -1175,7 +1173,6 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
   number={1},
   pages={45--55},
   year={2017},
-  publisher={IEEE}
 }
 @article{kang2016smart,
   title={Smart manufacturing: Past research, present findings, and future directions},
@@ -1191,7 +1188,6 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
   author={Guo, Yi and Guo, Shunan and Jin, Zhuochen and Kaul, Smiti and Gotz, David and Cao, Nan},
   journal={IEEE Transactions on Visualization and Computer Graphics},
   year={2021},
-  publisher={IEEE}
 }
 @article{bach2015time,
   title={Time curves: Folding time to visualize patterns of temporal evolution in data},
@@ -1240,12 +1236,12 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
 @inproceedings{hamid2014virtual,
   title={Virtual reality applications in manufacturing system},
   author={Hamid, Nur Suraya Sahol and Aziz, Faieza Abdul and Azizi, Amir},
-  booktitle={Proceedings of IEEE Science and Information Conference},
+  booktitle={Proceedings of the Science and Information Conference},
   pages={1034--1037},
   year={2014},
 }
 @inproceedings{amirkhanov2016visual,
-  title={Visual analysis of defects in glass fiber reinforced polymers for 4DCT interrupted in situ tests},
+  title={{Visual analysis of defects in glass fiber reinforced polymers for 4DCT interrupted in situ tests}},
   author={Amirkhanov, Alexander and Amirkhanov, Artem and Salaberger, Dietmar and Kastner, Johann and Gr{\"o}ller, M Eduard and Heinzl, Christoph},
   booktitle={Computer Graphics Forum},
   volume={35},
@@ -1264,7 +1260,7 @@ journal={IEEE Transactions on Visualization and Computer Graphics},
 @inproceedings{herr2018visual,
   title={Visual analytics for decomposing temporal event series of production lines},
   author={Herr, Dominik and Beck, Fabian and Ertl, Thomas},
-  booktitle={Proceedings of IEEE International Conference Information Visualisation},
+  booktitle={Proceedings of the International Conference Information Visualisation},
   pages={251--259},
   year={2018},
 }
