--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -660,7 +660,7 @@ Visualization and visual analytics can also be used to design system architectur
 
 \textbf{Multi-Source and Multi-Type Data Fusion Visual Analytics.}
 
-
+%\bibliographystyle{unsrt}
 \bibliographystyle{cas-model2-names}
 \bibliography{multimedia}
 
